--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev:local": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db":"npx prisma",
+    "db:mg":"npx prisma migrate dev",
+    "db:gen":"npx prisma generate",
+    "db:seed":"npx prisma db seed",
+    "mg":"pnpm db:mg && pnpm db:gen"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
