--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db":"npx prisma",
-    "db:mg":"npx prisma migrate dev",
-    "db:gen":"npx prisma generate",
-    "db:seed":"npx prisma db seed",
-    "mg":"pnpm db:mg && pnpm db:gen"
+    "db": "npx prisma",
+    "db:mg": "npx prisma migrate dev",
+    "db:gen": "npx prisma generate",
+    "db:seed": "npx prisma db seed",
+    "mg": "pnpm db:mg && pnpm db:gen"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@opherlabs/components": "1.0.0-0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
