--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.12",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
