--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -69,7 +69,7 @@ jobs:
         id: extract-version
         run: |
           VERSION=$(jq -r '.version' package.json)
-          echo "VERSION=$VERSION" > $GITHUB_ENV
+          echo "VERSION=$VERSION" > $GITHUB_OUTPUT
       - name: Extract tag
         id: extract-tag
         run: |
@@ -104,7 +104,7 @@ jobs:
         id: extract-version
         run: |
           VERSION=$(jq -r '.version' package.json)
-          echo "VERSION=$VERSION" > $GITHUB_ENV
+          echo "VERSION=$VERSION" > $GITHUB_OUTPUT
       - name: setup pnpm 👨‍💻
         uses: pnpm/action-setup@v4.0.0
         with:
