--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -78,7 +78,8 @@ jobs:
           # Replace any characters that are not allowed in Docker image tags with a valid alternative, for example, replacing '/' with '-'
           TAG=$(echo "$TAG" | tr / -)
           VERSION=$(jq -r '.version' package.json)
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          echo "VERSION=${SHORT_SHA}" >> $GITHUB_OUTPUT
           # Set the modified tag as an output
           echo "TAG=$TAG" >> $GITHUB_ENV
           echo "TAG=$TAG" >> $GITHUB_OUTPUT
@@ -104,7 +105,8 @@ jobs:
         id: extract-version
         run: |
           VERSION=$(jq -r '.version' package.json)
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          echo "VERSION=${SHORT_SHA}" >> $GITHUB_OUTPUT
       - name: setup pnpm 👨‍💻
         uses: pnpm/action-setup@v4.0.0
         with:
