--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           echo "
           DATABASE_URL=${{secrets.DATABASE_URL}}
+          AUTH_URL=${{secrets.AUTH_URL}}
           AUTH_SECRET=${{secrets.AUTH_SECRET}}
           AUTH_GOOGLE_ID=${{secrets.AUTH_GOOGLE_ID}}
           AUTH_AZURE_AD_SECRET=${{secrets.AUTH_AZURE_AD_SECRET}}
