--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
-    "@opherlabs/components": "1.0.0-0",
+    "@opherlabs/components": "1.0.1",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
