--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
+    "next-auth": "^5.0.0-beta.20",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-confetti": "^6.1.0",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "use-sound": "^4.0.3",
-    "next-auth": "^5.0.0-beta.20",
-    "react-confetti": "^6.1.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
