--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.0",
     "@prisma/client": "^5.19.1",
     "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
