--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -90,7 +90,7 @@ jobs:
           docker build -t ghcr.io/${{ github.repository }}:${{steps.extract-tag.outputs.VERSION}} .
           docker push ghcr.io/${{ github.repository }}:${{steps.extract-tag.outputs.VERSION}}
 
-  Deploy-To-Azure:
+  Deploy-To-Prod:
     name: Deploy Preview 🚀
     runs-on: ubuntu-latest
     needs: Container-Registry
@@ -128,4 +128,43 @@ jobs:
         uses: azure/webapps-deploy@v3.0.2
         with:
           app-name: ${{secrets.AZURE_APP_NAME}}
+          images: ghcr.io/${{github.repository}}:${{steps.extract-version.outputs.VERSION}}
+  Deploy-To-Demo:
+    name: Deploy Preview 🚀
+    runs-on: ubuntu-latest
+    needs: Container-Registry
+    environment: preview
+    steps:
+      - name: Checkout code 🧳
+        uses: actions/checkout@v4.1.7
+      - name: Setup Node 🍳
+        uses: actions/setup-node@v4.0.3
+        with:
+          node-version: 20
+      - name: Extract version
+        id: extract-version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          echo "VERSION=${SHORT_SHA}" >> $GITHUB_OUTPUT
+      - name: setup pnpm 👨‍💻
+        uses: pnpm/action-setup@v4.0.0
+        with:
+          version: 9.6.0
+          run_install: false
+      - name: Install packages 💠
+        run: pnpm install --no-frozen-lockfile
+      - name: Sync Database
+        run: |
+          echo "db synced"
+        env:
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
+      - name: Login to azure
+        uses: azure/login@v2.1.1
+        with:
+          creds: ${{ secrets.AZURE_EMO_CRED }}
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3.0.2
+        with:
+          app-name: ${{secrets.AZURE_DEMO_APP_NAME}}
           images: ghcr.io/${{github.repository}}:${{steps.extract-version.outputs.VERSION}}
