--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mg": "prisma migrate dev --name dev && prisma generate",
+    "gen": "prisma generate",
+    "db:sync": "prisma db push && prisma generate",
+    "studio": "prisma studio "
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
+    "@opherlabs/components": "^1.2.7",
     "@prisma/client": "^5.19.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.56.2",
+    "@trpc/client": "11.0.0-rc.522",
+    "@trpc/next": "11.0.0-rc.522",
+    "@trpc/react-query": "11.0.0-rc.522",
+    "@trpc/server": "11.0.0-rc.522",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
@@ -21,9 +31,12 @@
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-sound": "^4.0.3"
+    "use-sound": "^4.0.3",
+    "zod": "^3.23.8",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
