--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "11.0.0-rc.522",
     "@trpc/react-query": "11.0.0-rc.522",
     "@trpc/server": "11.0.0-rc.522",
+    "@types/ws": "^8.5.12",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
@@ -35,6 +36,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^4.0.3",
+    "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zustand": "5.0.0-rc.2"
   },
