--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -17,16 +17,37 @@ jobs:
     steps:
       - name: Checkout code 🧳
         uses: actions/checkout@v4.1.7
+
       - name: Setup Node 🍳
         uses: actions/setup-node@v4.0.3
         with:
           node-version: 20
+
       - name: setup pnpm 👨‍💻
         uses: pnpm/action-setup@v4.0.0
         with:
           version: 9.6.0
           run_install: false
+
+      - name: Cache dependencies 📦
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+
+      - name: Cache Next.js build output 🏗️
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+
       - name: Install pnpm 💠
         run: pnpm install --no-frozen-lockfile
+
       - name: build Application 📦
         run: pnpm build
