--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,11 +84,23 @@ jobs:
           echo "TAG=$TAG" >> $GITHUB_ENV
           echo "TAG=$TAG" >> $GITHUB_OUTPUT
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Production Image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:${{steps.extract-tag.outputs.VERSION}} .
+          docker build \
+            -t ghcr.io/${{ github.repository }}:${{steps.extract-tag.outputs.VERSION}} \
+            --build-arg NEXT_PUBLIC_URL=${{secrets.NEXT_PUBLIC_URL}} \
+            --build-arg DATABASE_URL=${{secrets.DATABASE_URL}} \
+            .
           docker push ghcr.io/${{ github.repository }}:${{steps.extract-tag.outputs.VERSION}}
-
+      - name: Build and Push Demo Image
+        run: |
+          docker build \
+            -t ghcr.io/${{ github.repository }}:demo-${{steps.extract-tag.outputs.VERSION}} \
+            --build-arg NEXT_PUBLIC_URL=${{secrets.DEMO_NEXT_PUBLIC_URL}} \
+            --build-arg DATABASE_URL=${{secrets.DEMO_DATABASE_URL}} \
+            .
+          docker push ghcr.io/${{ github.repository }}:prod-${{steps.extract-tag.outputs.VERSION}}
+    
   Deploy-To-Prod:
     name: Deploy to Production 🚀
     runs-on: ubuntu-latest
@@ -128,7 +140,7 @@ jobs:
         with:
           app-name: ${{secrets.AZURE_APP_NAME}}
           
-          images: ghcr.io/${{github.repository}}:${{steps.extract-version.outputs.VERSION}}
+          images: ghcr.io/${{github.repository}}:prod-${{steps.extract-version.outputs.VERSION}}
   Deploy-To-Demo:
     name: Deploy to demo environment 🏡
     runs-on: ubuntu-latest
@@ -167,4 +179,4 @@ jobs:
         uses: azure/webapps-deploy@v3.0.2
         with:
           app-name: ${{secrets.AZURE_DEMO_APP_NAME}}
-          images: ghcr.io/${{github.repository}}:${{steps.extract-version.outputs.VERSION}}
+          images: ghcr.io/${{github.repository}}:demo-${{steps.extract-version.outputs.VERSION}}
