--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,6 @@ jobs:
         run: |
           docker build \
             -t ghcr.io/${{ github.repository }}:prod-${{steps.extract-tag.outputs.VERSION}} \
-            --build-arg NEXT_PUBLIC_URL=${{secrets.NEXT_PUBLIC_URL}} \
             --build-arg DATABASE_URL=${{secrets.DATABASE_URL}} \
             .
           docker push ghcr.io/${{ github.repository }}:prod-${{steps.extract-tag.outputs.VERSION}}
@@ -150,7 +149,6 @@ jobs:
         run: |
           docker build \
             -t ghcr.io/${{ github.repository }}:demo-${{steps.extract-tag.outputs.VERSION}} \
-            --build-arg NEXT_PUBLIC_URL=${{secrets.DEMO_NEXT_PUBLIC_URL}} \
             --build-arg DATABASE_URL=${{secrets.DEMO_DATABASE_URL}} \
             .
           docker push ghcr.io/${{ github.repository }}:demo-${{steps.extract-tag.outputs.VERSION}}
@@ -192,8 +190,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3.0.2
         with:
-          app-name: ${{secrets.AZURE_APP_NAME}}
-          
+          app-name: heritage
           images: ghcr.io/${{github.repository}}:prod-${{steps.extract-version.outputs.VERSION}}
   Deploy-To-Demo:
     name: Deploy to demo environment 🏡
@@ -232,5 +229,5 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3.0.2
         with:
-          app-name: ${{secrets.AZURE_DEMO_APP_NAME}}
+          app-name: demo
           images: ghcr.io/${{github.repository}}:demo-${{steps.extract-version.outputs.VERSION}}
