--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -192,7 +192,7 @@ jobs:
           app-name: herittage
           images: ghcr.io/${{github.repository}}:prod-${{steps.extract-version.outputs.VERSION}}
   Deploy-To-Demo:
-    name: Deploy to demo environment 🏡
+    name: Deploy to demo 🏡
     runs-on: ubuntu-latest
     needs: [Demo-Image-Registry]
     environment: preview
