--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "11.0.0-rc.522",
     "@types/ws": "^8.5.12",
     "clsx": "^2.1.1",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-rc.0",
     "next-auth": "^5.0.0-beta.20",
